| Summary: | ASTERISK-27642: [patch] backtrace: Avoid -Wlogical-not-parentheses. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2018-01-30 09:52:07.000-0600 | Date Closed: | 2018-02-12 06:17:20.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | General |
| Versions: | 13.19.0 15.2.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace_logical-not-parentheses.patch | |
| Description: | On FreeBSD 11.1, the default compiler clang (4.0.0) reports:{code}backtrace.c:133:9: warning: logical not is only applied to the left hand side of this bitwise operator [-Wlogical-not-parentheses]
if (!bfd_get_section_flags(bfdobj, section) & SEC_ALLOC || ^{code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-01-30 09:52:07.800-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-02-12 06:17:21.410-0600 Change 8105 merged by Jenkins2: backtrace: Avoid potential spurious output. [https://gerrit.asterisk.org/8105|https://gerrit.asterisk.org/8105] By: Friendly Automation (friendly-automation) 2018-02-12 06:20:03.098-0600 Change 8104 merged by Jenkins2: backtrace: Avoid potential spurious output. [https://gerrit.asterisk.org/8104|https://gerrit.asterisk.org/8104] By: Friendly Automation (friendly-automation) 2018-02-12 06:20:15.297-0600 Change 8106 merged by Jenkins2: backtrace: Avoid potential spurious output. [https://gerrit.asterisk.org/8106|https://gerrit.asterisk.org/8106] | ||